2020-08-15  Tim Horton  <timothy_horton@apple.com>

        Live Web Content processes do not respect accent color if dynamically changed to "multicolor"
        https://bugs.webkit.org/show_bug.cgi?id=215523
        <rdar://problem/63941133>

        Reviewed by Wenson Hsieh.

        * TestWebKitAPI/Tests/WebKit/PreferenceChanges.mm:
        (deleteTestDefaults):
        (TEST):
        Fix some minor style issues with these tests.
        Fix a bug where these tests would leak state between themselves by leaving defaults behind.
        Change the NSUserDefaults key name so that it is abundantly obvious where it comes from when you see it in your defaults.
        Leave a FIXME for the future that these tests should probably not be writing to the real persistent defaults.
        Add a test that ensures that the observer correctly respects deletion of a default.

2020-08-14  Jonathan Bedard  <jbedard@apple.com>

        [webkitcorepy] Add a NullHandler to logger
        https://bugs.webkit.org/show_bug.cgi?id=215524
        <rdar://problem/67102367>

        Reviewed by Dewei Zhu.

        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py: Add default logging handler to webkitcorepy.log.

2020-08-14  Brady Eidson  <beidson@apple.com>

        Gamepad.GCFVersusHID fails on Big Sur.
        <rdar://problem/66948608> and https://bugs.webkit.org/show_bug.cgi?id=215520

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/mac/HIDGamepads.mm: Accept two different names for the virtual Xbox One controller

2020-08-14  Ryan Haddad  <ryanhaddad@apple.com>

        Move WebGL bot from debug to release builds
        https://bugs.webkit.org/show_bug.cgi?id=215509

        Rubber-stamped by Darin Adler.

        Make the switch to release builds since many of the tests are already slow, and running in debug configuration makes them even slower

        * BuildSlaveSupport/build.webkit.org-config/config.json: